# AEDS2_Aplicacao_Arvore_B

./: CMakeLists.txt  Documentacao.bak  Documentacao.tmd  LEIAME.txt  README.md  Relatorio B_TREE.bak  Relatorio TP2.docx  Relatorio.bak  Relatorio.tmd  b_tree.c  b_tree.h  main.c  names_database.txt  registries_generated.txt  registries_generator.c  registries_generator.h  registry.c  registry.h  statistic.c  statistic.h  statistic.txt
graph/: graph_generator.c  graph_generator.h
registry/: Fisher_Yates.c  Fisher_Yates.h  registries_generated.txt  registries_generator.c  registries_generator.h  registry.c  registry.h
